Compiling and tests passing (a lot disabled as dynamic agent activation does not work)